[project]
name = "dagabaaz"
version = "0.0.4"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]
description = "A DAG execution engine for pipeline orchestration."
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"

[project.optional-dependencies]
re2 = [
    "google-re2>=1.0",
]
dev = [
    "pytest>=8.0",
    "ruff",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
