[project]
name = "dagabaaz"
version = "0.5.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]
description = "A DAG execution engine for pipeline orchestration."
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    { name = "Varun Chopra" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.optional-dependencies]
re2 = [
    "google-re2>=1.0",
]
dev = [
    "pytest>=8.0",
    "ruff",
]

[project.urls]
Repository = "https://github.com/varunchopra/dagabaaz"
Issues = "https://github.com/varunchopra/dagabaaz/issues"

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
